# ajoy

./: .env  .env.example  ajoy.db  ajoy_sandbox_backup_20260605_132028.db  ajoykey  ajoykey.pub  backtest.py  backtest_data.json  backtest_fetch.py  guardian.py  help.txt  patch_db_today.py  pyproject.toml  reconcile.py  requirements.txt  reset_db.py  run.py  run.sh  test_ajoy.db-journal
app/: config.py  database.py  main.py  models.py  schemas.py
app/routers/: config.py  history.py  indicators.py  symbols.py  trades.py
app/services/: indicators.py  scheduler.py  strategy.py  strategy_BKP_June22.py  strategy_ema.py  tradier.py  tradier.py.bak
app/templates/: index.html
scripts/: reset_db.py  setup_cron.sh
static/css/: style.css
static/js/: app.js
tests/: conftest.py  test_01_math.py  test_02_layer1.py  test_03_layers234.py  test_04_exit.py  test_05_tradier_helpers.py  test_06_layer5_regime.py  test_07_config.py  test_08_db_guards.py  test_09_api.py  test_10_trading_window.py  test_11_exit_edges.py  test_12_close_trade.py  test_13_attempt_entry.py  test_14_pnl_schemas.py  test_14_trailing_stop.py  test_15_api_trades_full.py  test_16_ema_confirm.py  test_17_trend_reversal_confirm.py  test_18_orphan_management.py
