[project]
name = "ajoy"
version = "0.1.0"
description = "Intraday options trading agent — Tradier sandbox"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "jinja2==3.1.4",
    "python-dotenv==1.0.1",
    "sqlalchemy==2.0.30",
    "httpx==0.27.0",
    "apscheduler==3.10.4",
    "pydantic-settings==2.2.1",
    "aiosqlite==0.20.0",
    "asgi-lifespan>=2.1.0",
]

[tool.uv]
# This is an application, not a publishable library — skip the wheel build step.
package = false

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]
